<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/LeftBar"
            android:layout_width="411dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/tvGiamSat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/defaultColor"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/giam_sat"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/tvKhopLop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/defaultColor"
                android:clickable="true"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/khop_lop"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/tbDaoLop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/defaultColor"
                android:clickable="true"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/dao_lop"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/tbCaiDat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/defaultColor"
                android:clickable="true"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/cai_dat"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/tbAmThanh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/defaultColor"
                android:clickable="true"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/am_thanh"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:ignore="NestedWeights" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/right_screen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">

        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>